using template tags

--- a/pages/templates/pages/about.html
+++ b/pages/templates/pages/about.html
@@ -1,4 +1,10 @@
-<!DOCTYPE html>
+{% extends 'pages/base.html' %}
+
+{% block content %}
+<h1>This Is About Page</h1>
+{% endblock content %}
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,6 +13,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This IS About Page</h1>
+    <h1>This Is About Page</h1>
 </body>
-</html>
+</html> -->
