--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -1,4 +1,10 @@
-<!DOCTYPE html>
+{% extends 'pages/base.html' %}
+
+{% block content %}
+<h1>salam donya</h1>
+{% endblock content %}
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,4 +15,4 @@
 <body>
     <h1>salam donya</h1>
 </body>
-</html>
+</html> -->
